dropdown menu gap err fix

--- a/app/assets/stylesheets/face_of_active_admin/_header.scss
+++ b/app/assets/stylesheets/face_of_active_admin/_header.scss
@@ -179,7 +179,7 @@
         list-style: none;
         z-index: 1;
         transform: translateZ(0);
-        transform: translateY(25%);
+        transform: translateY(2em);
         transition: opacity 1s ease 0s, z-index 0s linear 1s;
 
         li {
